--- a/Source code/Theme/Themes/Menus/ContextMenu.xaml
+++ b/Source code/Theme/Themes/Menus/ContextMenu.xaml
@@ -9,7 +9,7 @@
     <Style TargetType="{x:Type ContextMenu}">
         
         <Setter Property="Background" Value="{StaticResource Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
         <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultThickness, Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
