--- a/Source code/Theme/Themes/TextBoxes/PasswordBox.xaml
+++ b/Source code/Theme/Themes/TextBoxes/PasswordBox.xaml
@@ -11,7 +11,7 @@
         <Setter Property="PasswordChar" Value="●"/>
 
         <Setter Property="CaretBrush" Value="{StaticResource Foreground}"/>
-        <Setter Property="SelectionBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="SelectionBrush" Value="{StaticResource MiddleLight}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
 
