--- a/Source code/Theme/Themes/TextBoxes/TextBoxesBase.xaml
+++ b/Source code/Theme/Themes/TextBoxes/TextBoxesBase.xaml
@@ -9,7 +9,7 @@
     <Style x:Key="TextBoxesBaseStyle" TargetType="{x:Type Control}">
         
         <Setter Property="Background" Value="{StaticResource Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
         <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultThickness, Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
