--- a/Source code/Theme.Test/MainWindow.xaml
+++ b/Source code/Theme.Test/MainWindow.xaml
@@ -326,7 +326,7 @@
 				<Grid Grid.Column="2"
 					  Grid.Row="0"
 					  Grid.RowSpan="4">
-					<TextBlock Foreground="{StaticResource ForegroundMiddlelight}"
+					<TextBlock Foreground="{StaticResource MiddleLight}"
 							   FontSize="{Binding Source={x:Static metro:Parameters.Instance}, Path=HeaderFontSize}"                              
 							   Text="Click here to see ContextMenu"
 							   HorizontalAlignment="Center"
