--- a/Source code/Theme/Themes/Buttons/CheckBox.xaml
+++ b/Source code/Theme/Themes/Buttons/CheckBox.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-					xmlns:root="clr-namespace:Elysium.Theme"
-					xmlns:converters="clr-namespace:Elysium.Theme.Converters">
+					xmlns:root="clr-namespace:Elysium.Theme">
 
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="/Elysium.Theme;component/Themes/SharedResources.xaml"/>
@@ -10,7 +9,7 @@
 	<Style TargetType="{x:Type CheckBox}">
 
 		<Setter Property="Background" Value="{StaticResource Background}"/>
-		<Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+		<Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
 		<Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultThickness, Mode=OneWay}"/>
 		<Setter Property="Foreground" Value="{StaticResource Foreground}"/>
 		<Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
@@ -75,7 +74,7 @@
 									</Grid>
 								</Border>
 							</BulletDecorator.Bullet>
-							<ContentPresenter Margin="{Binding Source={x:Static root:Parameters.Instance}, Path=BoldPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter=Left}"
+							<ContentPresenter Margin="{Binding Source={x:Static root:Parameters.Instance}, Path=BoldPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"
 											  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
 											  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
 											  RecognizesAccessKey="True"/>
@@ -107,12 +106,12 @@
 		
 		<Style.Triggers>			
 			<Trigger Property="IsMouseOver" Value="True">
-				<Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
-				<Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+				<Setter Property="Background" Value="{StaticResource Highlight}"/>
+				<Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
 			</Trigger>
 			<Trigger Property="IsPressed" Value="True">
-				<Setter Property="Background" Value="{StaticResource ForegroundHighlight}"/>
-				<Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
+				<Setter Property="Background" Value="{StaticResource Highlight}"/>
+				<Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
 			</Trigger>
 			<Trigger Property="IsEnabled" Value="False">
 				<Setter Property="Background" Value="{StaticResource Background}"/>
