--- a/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
+++ b/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:root="clr-namespace:Elysium.Theme"
-                    xmlns:primitives="clr-namespace:Elysium.Theme.Controls.Primitives"
-                    xmlns:converters="clr-namespace:Elysium.Theme.Converters">
+                    xmlns:primitives="clr-namespace:Elysium.Theme.Controls.Primitives">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Elysium.Theme;component/Themes/SharedResources.xaml"/>
@@ -11,18 +10,18 @@
     <Style x:Key="{x:Type primitives:CommandButtonBase}" TargetType="{x:Type primitives:CommandButtonBase}">
         
         <Setter Property="Background" Value="{StaticResource Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=SemiboldThickness, Mode=OneWay}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
+        <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=SemiBoldThickness, Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
         <Setter Property="FontSize" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=ContentFontSize, Mode=OneWay}"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
-        <Setter Property="root:Parameters.CommandButtonMask" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="root:Parameters.CommandButtonMask" Value="{StaticResource MiddleLight}"/>
         
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
-        <Setter Property="Padding" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=SemiboldPadding, Mode=OneWay}"/>
+        <Setter Property="Padding" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=SemiBoldPadding, Mode=OneWay}"/>
         
         <Setter Property="SnapsToDevicePixels" Value="True"/>
 
@@ -39,7 +38,7 @@
                                  Grid.Row="0"
                                  Fill="{TemplateBinding Background}"
                                  Stroke="{TemplateBinding BorderBrush}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={x:Static converters:ThicknessToDoubleConverter.Instance}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"/>
@@ -47,7 +46,7 @@
                                  Grid.Row="0"
                                  Fill="{TemplateBinding root:Parameters.CommandButtonMask}"
                                  Stroke="{StaticResource Transparent}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={x:Static converters:ThicknessToDoubleConverter.Instance}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center">
@@ -90,8 +89,8 @@
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
-                <Setter Property="root:Parameters.CommandButtonMask" Value="{StaticResource ForegroundLowlight}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
+                <Setter Property="root:Parameters.CommandButtonMask" Value="{StaticResource Lowlight}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource Foreground}"/>
