--- a/Source code/Theme/Themes/Menus/MenuItem.xaml
+++ b/Source code/Theme/Themes/Menus/MenuItem.xaml
@@ -1,16 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:root="clr-namespace:Elysium.Theme"
-                    xmlns:converters="clr-namespace:Elysium.Theme.Converters">
+                    xmlns:root="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Elysium.Theme;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
+    
     <Style x:Key="{x:Static MenuItem.SeparatorStyleKey}" TargetType="{x:Type Separator}">
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundHighlight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Highlight}"/>
         <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultThickness, Mode=OneWay}"/>
         
         <Setter Property="Focusable" Value="False"/>
@@ -18,7 +17,7 @@
         
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=SemiboldPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter='Left, Right'}"/>
+        <Setter Property="Padding" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=SemiBoldPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Right'}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -30,7 +29,7 @@
                             BorderThickness="0"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Line Stroke="{TemplateBinding BorderBrush}"
-                              StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={x:Static converters:ThicknessToDoubleConverter.Instance}}"
+                              StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
                               X1="0" Y1="0"
                               X2="1" Y2="0"
                               Stretch="Fill"
@@ -65,7 +64,7 @@
                 <Path x:Name="CheckBullet"
                       Grid.Column="0"
                       Fill="{StaticResource Transparent}"
-                      Stroke="{StaticResource ForegroundLowlight}"
+                      Stroke="{StaticResource Lowlight}"
                       StrokeThickness="{Binding Source={x:Static root:Parameters.Instance}, Path=BoldThicknessValue, Mode=OneWay}"
                       Stretch="Uniform"
                       Visibility="Collapsed"
@@ -88,7 +87,7 @@
                                   Grid.Column="1"
                                   ContentSource="Header"
                                   RecognizesAccessKey="True"
-                                  Margin="{Binding Source={x:Static root:Parameters.Instance}, Path=BoldPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter='Left, Right'}"
+                                  Margin="{Binding Source={x:Static root:Parameters.Instance}, Path=BoldPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Right'}"
                                   HorizontalAlignment="Left"
                                   VerticalAlignment="Center"/>
                 <TextBlock Grid.Column="2"
@@ -138,11 +137,11 @@
                                   Grid.Column="1"
                                   ContentSource="Header"
                                   RecognizesAccessKey="True"
-                                  Margin="{Binding Source={x:Static root:Parameters.Instance}, Path=BoldPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter='Left, Right'}"
+                                  Margin="{Binding Source={x:Static root:Parameters.Instance}, Path=BoldPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Right'}"
                                   HorizontalAlignment="Left"
                                   VerticalAlignment="Center"/>
                 <Polygon Grid.Column="2"
-                         Fill="{StaticResource ForegroundLowlight}"
+                         Fill="{StaticResource Lowlight}"
                          StrokeThickness="0"
                          Stretch="Uniform"
                          Margin="{TemplateBinding root:Parameters.SubmenuHeaderArrowMargin}"
@@ -187,7 +186,7 @@
     <Style TargetType="{x:Type MenuItem}">
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=FontFamily}"/>
@@ -225,8 +224,8 @@
                     <Condition Property="IsHighlighted" Value="True"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background" Value="{StaticResource ForegroundMiddlelight}"/>
-                    <Setter Property="Foreground" Value="{StaticResource ForegroundContrast}"/>
+                    <Setter Property="Background" Value="{StaticResource MiddleLight}"/>
+                    <Setter Property="Foreground" Value="{StaticResource Contrast}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
             <MultiTrigger>
@@ -235,8 +234,8 @@
                     <Condition Property="IsHighlighted" Value="True"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background" Value="{StaticResource ForegroundMiddlelight}"/>
-                    <Setter Property="Foreground" Value="{StaticResource ForegroundContrast}"/>
+                    <Setter Property="Background" Value="{StaticResource MiddleLight}"/>
+                    <Setter Property="Foreground" Value="{StaticResource Contrast}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
             
