--- a/Source code/Theme/Themes/Ranges/Slider.xaml
+++ b/Source code/Theme/Themes/Ranges/Slider.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:root="clr-namespace:Elysium.Theme"
-                    xmlns:converters="clr-namespace:Elysium.Theme.Converters">
+                    xmlns:root="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Elysium.Theme;component/Themes/SharedResources.xaml"/>
@@ -9,7 +8,7 @@
 
     <Style x:Key="SliderRepeatButtonStyle" TargetType="{x:Type RepeatButton}">
 
-        <Setter Property="Background" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="Background" Value="{StaticResource MiddleLight}"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
@@ -46,7 +45,7 @@
 
     <Style x:Key="SliderThumbStyle" TargetType="{x:Type Thumb}">
         
-        <Setter Property="Background" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="Background" Value="{StaticResource MiddleLight}"/>
         <Setter Property="BorderBrush" Value="{StaticResource Background}"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -73,10 +72,10 @@
         
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource ForegroundLowlight}"/>
+                <Setter Property="Background" Value="{StaticResource Lowlight}"/>
             </Trigger>
             <Trigger Property="IsDragging" Value="True">
-                <Setter Property="Background" Value="{StaticResource ForegroundLowlight}"/>
+                <Setter Property="Background" Value="{StaticResource Lowlight}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="{StaticResource Disabled}"/>
@@ -114,7 +113,7 @@
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
-                    <Thumb BorderThickness="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter=Right}"
+                    <Thumb BorderThickness="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"
                            IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{TemplateBinding root:Parameters.SliderThumbThickness}"
                            Height="{TemplateBinding Height}"
@@ -164,7 +163,7 @@
                                   Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
-                    <Thumb BorderThickness="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter=Top}"
+                    <Thumb BorderThickness="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Top}"
                            IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{TemplateBinding Width}"
                            Height="{TemplateBinding root:Parameters.SliderThumbThickness}"
@@ -188,7 +187,7 @@
     <Style TargetType="{x:Type Slider}">
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
