--- a/Source code/Theme/Themes/Scrolls/ScrollBar.xaml
+++ b/Source code/Theme/Themes/Scrolls/ScrollBar.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:root="clr-namespace:Elysium.Theme"
-                    xmlns:converters="clr-namespace:Elysium.Theme.Converters">
+                    xmlns:root="clr-namespace:Elysium.Theme">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Elysium.Theme;component/Themes/SharedResources.xaml"/>
@@ -10,7 +9,7 @@
     <Style x:Key="ScrollBarLineDownButtonStyle" TargetType="{x:Type RepeatButton}">
         
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
         <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultThickness, Mode=OneWay}"/>
         
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -41,7 +40,7 @@
         
         <Style.Triggers>            
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource Foreground}"/>
@@ -107,7 +106,7 @@
 
     <Style x:Key="ScrollBarThumbStyle" TargetType="{x:Type Thumb}">
 
-        <Setter Property="Background" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="Background" Value="{StaticResource MiddleLight}"/>
         <Setter Property="BorderBrush" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderThickness" Value="0"/>
 
@@ -117,7 +116,7 @@
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
 
-        <Setter Property="Padding" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter=Left}"/>
+        <Setter Property="Padding" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -138,7 +137,7 @@
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource ForegroundLowlight}"/>
+                <Setter Property="Background" Value="{StaticResource Lowlight}"/>
             </Trigger>
             <Trigger Property="IsDragging" Value="True">
                 <Setter Property="Background" Value="{StaticResource Foreground}"/>
@@ -242,7 +241,7 @@
     <Style TargetType="{x:Type ScrollBar}">
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
@@ -257,7 +256,7 @@
 
             <Trigger Property="Orientation" Value="Horizontal">
 
-                <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter=Bottom}"/>
+                <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Bottom}"/>
 
                 <Setter Property="MinHeight" Value="6"/>
                 <Setter Property="Height" Value="6"/>
@@ -269,7 +268,7 @@
 
             <Trigger Property="Orientation" Value="Vertical">
 
-                <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={x:Static converters:DoubleToThicknessConverter.Instance}, ConverterParameter=Right}"/>
+                <Setter Property="BorderThickness" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=DefaultPaddingValue, Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"/>
 
                 <Setter Property="MinWidth" Value="6"/>
                 <Setter Property="Width" Value="6"/>
