--- a/Source code/Theme/Themes/Selectors/SelectorsItemsBase.xaml
+++ b/Source code/Theme/Themes/Selectors/SelectorsItemsBase.xaml
@@ -8,7 +8,7 @@
     <Style x:Key="SelectorsItemsBaseStyle" TargetType="{x:Type ListBoxItem}">
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource MiddleLight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type Selector}}, Path=Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type Selector}}, Path=FontFamily}"/>
