--- a/Source code/Theme/Themes/Tabs/TabControl.xaml
+++ b/Source code/Theme/Themes/Tabs/TabControl.xaml
@@ -9,7 +9,7 @@
     <Style TargetType="{x:Type TabControl}">
 
         <Setter Property="Background" Value="{StaticResource Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
@@ -23,7 +23,7 @@
 
         <Setter Property="Padding" Value="0"/>
         
-        <Setter Property="root:Parameters.TabControlIndicatorBrush" Value="{StaticResource ForegroundHighlight}"/>
+        <Setter Property="root:Parameters.TabControlIndicatorBrush" Value="{StaticResource Highlight}"/>
 
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
