--- a/Source code/Theme/Themes/Tabs/TabItem.xaml
+++ b/Source code/Theme/Themes/Tabs/TabItem.xaml
@@ -9,9 +9,9 @@
     <Style x:Key="TabItemHeaderStyle" TargetType="{x:Type ContentControl}">
         
         <Setter Property="Background" Value="{StaticResource Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Foreground" Value="{StaticResource ForegroundMiddlelight}"/>
+        <Setter Property="Foreground" Value="{StaticResource MiddleLight}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
         <Setter Property="FontSize" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=HeaderFontSize, Mode=OneWay}"/>
         <Setter Property="FontWeight" Value="Normal"/>        
@@ -80,7 +80,7 @@
     <Style TargetType="{x:Type TabItem}">
 
         <Setter Property="Background" Value="{StaticResource Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Lowlight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="FontFamily" Value="{Binding Source={x:Static root:Parameters.Instance}, Path=FontFamily, Mode=OneWay}"/>
